[tool.poetry]
name = "BaiduPCS-Py"
homepage = "https://github.com/PeterDing/BaiduPCS-Py"
version = "0.7.4"
description = "Baidu Pcs Api and App"
authors = ["PeterDing <dfhayst@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.1"
rich = "^12.6.0"
requests-toolbelt = "^0.10.1"
pillow = "^9.3.0"
click = "^8.1.3"
typing-extensions = "^4.4.0"
aget = "^0.1.17"
chardet = "^5.0.0"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
jinja2 = "^3.1.2"
cryptography = "^38.0.3"
cython = "^0.29.32"
passlib = "^1.7.4"

[tool.poetry.scripts]
BaiduPCS-Py = 'baidupcs_py.app:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
black = "^22.10.0"
setuptools = "^65.6.0"
cython = "^0.29.32"

[build-system]
requires = ["poetry-core>=1.0.0", "cython", "wheel", "setuptools"]
build-backend = "poetry.core.masonry.api"
