[tool.poetry]
name = "BaiduPCS-Py"
homepage = "https://github.com/PeterDing/BaiduPCS-Py"
version = "0.7.6"
description = "Baidu Pcs Api and App"
authors = ["PeterDing <dfhayst@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.black]
line-length = 119

[tool.ruff]
lint.ignore = ["E501", "E402", "F401", "F403", "F841"]
line-length = 119

[tool.poetry.dependencies]
python = "^3.8"
requests = ">=2"
requests-toolbelt = ">=1.0"
rich = ">=13.7"
pillow = ">=10.1"
click = ">=8.1"
typing-extensions = ">=4.8"
aget = ">=0.2"
chardet = ">=5.2"
fastapi = ">=0.104"
uvicorn = ">=0.24"
jinja2 = ">=3.1"
cryptography = ">=41.0"
cython = ">=3.0"
passlib = ">=1.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4"
ruff = ">=0.3"
setuptools = ">=69.0"
cython = ">=3.0"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.scripts]
BaiduPCS-Py = 'baidupcs_py.app:main'

[build-system]
requires = ["poetry-core", "cython", "wheel", "setuptools"]
